--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,7 @@ nav.menu-mobile {
   float: right;
   width: 28px;
   height: 28px;
+  margin-top: 7px;
   cursor: pointer;
   background-image: url(../image/menu-mobile.png);
   background-size: 100% 100%;
@@ -44,16 +45,16 @@ nav.menu-mobile {
 nav.menu-mobile ul {
   display: none;
   z-index: 999;
-  margin-top: 25px;
   text-align: center;
   width: 100%;
   position: absolute;
   left: 0;
-  top: 40px;
+  top: 60px;
   background-color: white;
 }
 
 nav.menu-mobile ul li {
+  font-size: 12px;
   text-transform: uppercase;
 }
 
@@ -84,6 +85,7 @@ header ul a {
 
 /********************/
 /* MOSAICO  */
+
 .mosaico-single {
   float: left;
   width: calc(100% / 6);
@@ -153,7 +155,7 @@ section.perfil-container {
 }
 
 section.perfil-container .container {
-  max-width: 1000px;
+  max-width: 800px;
 }
 
 section.perfil-container .perfil-wraper {
@@ -166,6 +168,7 @@ section.perfil-container .perfil-wraper2 {
   left: 0;
   top: 0;
   display: flex;
+  align-items: center;
   width: 100%;
   height: 100%;
 }
@@ -179,7 +182,7 @@ section.perfil-container .img-perfil {
 
 section.perfil-container .texto-perfil {
   width: 60%;
-  padding: 20px 30px;
+  padding: 0 30px;
 }
 
 section.perfil-container .texto-perfil h2 {
@@ -188,14 +191,13 @@ section.perfil-container .texto-perfil h2 {
 }
 
 section.perfil-container .texto-perfil p {
-  color: rgb(190, 190, 190);
-  font-size: 15px;
-  line-height: 25px;
+  color: #4b4b4b;
+  font-size: 14px;
   margin-top: 8px;
 }
 
 section.videos {
-  padding: 70px 0 50px 0;
+  padding: 0 50px 0;
 }
 
 section.videos .box-video {
@@ -226,6 +228,7 @@ section.tratamentos .tratamento-container {
 section.tratamentos > h2 {
   color: #698293;
   text-align: center;
+  font-size: 18px;
 }
 
 section.tratamentos > .container {
@@ -236,21 +239,21 @@ section.tratamentos > .container {
   padding: 20px;
 }
 
-.tratamentos h2 {
+.tratamento-single h2 {
   font-size: 18px;
   color: #737373;
 }
 
-.tratamentos p {
+.tratamento-single p {
   padding: 10px 0;
-  color: #b4b4b4;
   font-size: 13px;
+  color: #b4b4b4;
 }
 
 section.depoimentos > h2 {
   color: #698293;
   text-align: center;
-  font-size: 19px;
+  font-size: 18px;
 }
 
 section.depoimentos > .container {
@@ -333,7 +336,6 @@ section.depoimentos .depoimento-single {
 }
 
 section.contato {
-  background: rgb(240, 240, 240);
   padding: 60px 2%;
 }
 
@@ -345,8 +347,8 @@ section.contato h2 {
 
 section.contato form {
   width: 100%;
-  max-width: 500px;
   margin: 30px auto;
+  max-width: 500px;
 }
 
 .form-wraper {
@@ -373,11 +375,15 @@ section.contato form {
   height: 35px;
   line-height: 35px;
   padding-left: 9px;
+  font-size: 15px;
+  color: #444;
+  font-weight: normal;
   border: 1px solid #dadada;
   margin-top: 8px;
 }
 
 .form-wraper textarea {
+  font-size: 15px;
   width: 100%;
   margin-top: 8px;
   padding: 8px;
@@ -451,19 +457,19 @@ footer .footer-block {
   section.servicos > .container .box-servico:nth-of-type(1) {
     width: 90%;
     max-width: 350px;
-    padding: 30px 2%;
+    padding: 40px 2%;
   }
 
   section.servicos > .container .box-servico:nth-of-type(2) {
     width: 94%;
     max-width: 380px;
-    padding: 40px 2%;
+    padding: 50px 2%;
   }
 
   section.servicos > .container .box-servico:nth-of-type(3) {
     width: 90%;
     max-width: 350px;
-    padding: 30px 2%;
+    padding: 40px 2%;
   }
 
   section.perfil-container .perfil-wraper {
